--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
 		"lint:fix": "biome lint --fix",
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
-		"type-check": "tsc --noEmit"
+		"type-check": "tsc --noEmit",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "1.20.2",
@@ -18,7 +21,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.2",
+		"@cloudflare/vitest-pool-workers": "^0.5.29",
+		"@vitest/coverage-v8": "^2.1.8",
 		"typescript": "5.9.3",
+		"vitest": "^2.1.8",
 		"wrangler": "^4.45.2"
 	}
 }
