--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@modelcontextprotocol/sdk": "1.20.2",
 		"agents": "^0.2.19",
+		"tslib": "^2.8.1",
 		"zod": "^3.25.76"
 	},
 	"devDependencies": {
